# jmenu

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/actions/cc-title/: action.yml
.github/actions/setup-env/: action.yml
.github/workflows/: analyze-and-test.yml  build-and-release.yml  check-pull-request-title.yml  update-documentation.yml
docs/: changelog.md  index.md
docs/modules/: api.md  classes.md  main.md
jmenu/: jmenu.py  restaurants.py  utils.py  version.py
latest/modules/api/: index.html
latest/modules/classes/: index.html
latest/modules/main/: index.html
src/jmenu/: __init__.py  __main__.py  api.py  classes.py  main.py
tests/: conftest.py  test_api.py  test_main.py
v1.5.0/: 404.html  index.html  objects.inv
v1.5.0/changelog/: index.html
v1.5.0/modules/api/: index.html
v1.5.0/modules/classes/: index.html
v1.5.0/modules/main/: index.html
v1.5.0/search/: search_index.json
v1.6.0/: 404.html  index.html  objects.inv
v1.6.0/changelog/: index.html
v1.6.0/modules/api/: index.html
v1.6.0/modules/classes/: index.html
v1.6.0/modules/main/: index.html
v1.6.0/search/: search_index.json
v1.6.1/: 404.html  index.html
v1.6.1/changelog/: index.html
v1.6.1/modules/api/: index.html
v1.6.1/modules/classes/: index.html
v1.6.1/modules/main/: index.html
