[project]
name = "jmenu"
version = "1.0.1"
description = "Fetches restaurants daily menu from Jamix service"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jkerola/jmenu"
"Bug Tracker" = "https://github.com/jkerola/jmenu/issues"
